--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.8.1",
     "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.176",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
